@@ -1,3 +1,5 @@
+2006/2/27 -- released version 20060227_trunk
+
 2006/2/26 -- released version 20060226_trunk
 
 2006/2/25 -- released version 20060225_trunk
